Fix Save-As functionality.

File system operations like QFile require paths instead of URLs, which
is the difference between the uses of:
* url.toDisplayString -> file:///the/path
* url.toLocalFile -> /the/path
Correctly use toLocalFile for all file system calls.

BUG: 356233